# photometry_FLMM

./: .gitignore  README.md  dev.txt  plot_fui.R  pyproject.toml  requirements.in  requirements.txt  setup.py
.github/workflows/: lint.yaml  test.yaml
Figures/: README.md
Figures/Appendix_Citations/: README.md  photometry_mentions.R
Figures/Appendix_DA_Adapts/: README.md  da_adapts_learn_analysis_Interaction_Avg.R  da_adapts_learn_fReg.R
Figures/Figure 5/: README.md  science_paper_Fig4G-I Final.R
Figures/Figure 6/: README.md  science_paper_Fig4G-I Inset.R  science_paper_Fig4G-I.R  science_paper_FigG-I Photobleach.R
Figures/Figure_1/: README.md  da_adapts_learn_intro.R
Figures/Figure_10_11/: READ.md
Figures/Figure_12/: README.md  science_paper_Exp1-lick_aligned_Lick_bout_Figures.R
Figures/Figure_14/: Exp1 - Cue Aligned Trial Effect.R  README.md
Figures/Figure_15/: README.md
Figures/Figure_16/: README.md  science_background_rewards.R
Figures/Figure_17/: README.md  science_paper_Fig6A-D.R
Figures/Figure_2/: FLMM Explanation Inset New.R  README.md  fLME_explanation PDF.pptx  fLME_explanation.pptx  method_explanation_fig.R  signal_heatmap.R
Figures/Figure_3/: Exp1 - Figure3.R  README.md  hierarchical data.pptx  science_paper_Exp1-lick_aligned_Figures-Temporal_Correl.R
Figures/Figure_4/: Exp1 - Lick Aligned IRI Author Analysis.R  Exp1 - Lick Aligned.R  (+2 more)
Tutorials/: example_data.csv  python_fastFMM_vignette.py
fast_flmm_rpy2/: flmm_run.py  ingest.py  plot_fui.py
fast_fmm_rpy2/: fmm_run.py  ingest.py  plot_fui.py
tests/: test_flmm.py  test_fmm.py  test_plot_fui.py  test_read_csv.py
(+63 files in other folders)
