[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photometry_FLMM"
version = "0.1.0"
description = "FLMM rpy2 wrapper for analyzing Fiber Photometry data"
authors = [
    {name = "Josh Lawrimore", email = "josh.lawrimore@nih.gov"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}  # Add a LICENSE file if you have one

dependencies = [
    "rpy2",
    "jupyter",
    "pandas",
    "matplotlib",
    "fast-fmm-rpy2>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "nb-clean>=4.0.1",
    "pandas-stubs",
    "ruff>=0.11.9",
]

[tool.setuptools]
packages = {find = {}}

[tool.ruff]

line-length = 88
indent-width = 4

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["T20", "E402"]
